# srugana

./: README.md
hero/: pyproject.toml  replit.md
hero/hack/: replit.md
hero/hack/bot-hemanth/: README.md  actms.db  app.py  database.py  faq.json  replit.md  seed_data.py
hero/hack/bot-hemanth/attached_assets/: Pasted-Build-a-Python-Flask-backend-for-the-ACTMS-Anti-Corruption-Tender-Management-System-System-Req-1757831665811_1757831665812.txt  index_1757831615725.html
hero/hack/bot-hemanth/models/: isolation_forest_20250914_093042.joblib  isolation_forest_20250914_094818.joblib
hero/hack/bot-hemanth/services/: chatbot_service.py  ml_service.py  nlp_service.py
hero/hack/bot-hemanth/utils/: file_handler.py
